<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                style="@style/MainText"
                android:id="@+id/team_a_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:hint="@string/team_a_name"
                android:inputType="text|textMultiLine"
                android:maxLines="2"
                android:maxLength="20"
                android:maxWidth="170dp"
                android:text="@string/team_a_text" />

            <TextView
                style="@style/ScoreText"
                android:id="@+id/score_a_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="@string/score_a_text"  />

            <Button
                android:id="@+id/three_pnts_a_button"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_pnts_button" />

            <Button
                style="@style/CustomButton"
                android:id="@+id/two_pnts_a_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_pnts_button" />

            <Button
                style="@style/CustomButton"
                android:id="@+id/free_throw_a_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_throw_button" />

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                style="@style/MainText"
                android:id="@+id/team_b_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:hint="@string/team_b_name"
                android:inputType="text|textMultiLine"
                android:maxLines="2"
                android:maxLength="20"
                android:maxWidth="170dp"
                android:text="@string/team_b_text" />

            <TextView
                style="@style/ScoreText"
                android:id="@+id/score_b_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="@string/score_b_text" />

            <Button
                style="@style/CustomButton"
                android:id="@+id/three_pnts_b_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_pnts_button" />

            <Button
                style="@style/CustomButton"
                android:id="@+id/two_pnts_b_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_pnts_button" />

            <Button
                style="@style/CustomButton"
                android:id="@+id/free_throw_b_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_throw_button" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/CustomButton"
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button" />
        <Button
            style="@style/CustomButton"
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_text" />
        <Button
            style="@style/CustomButton"
            android:id="@+id/display_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_text"/>

    </LinearLayout>

</LinearLayout>